# kairos

./: .gitignore  README.md  co.tauos.Kairos.Devel.json  co.tauos.Kairos.json  com.fyralabs.Kairos.Devel.json  com.fyralabs.Kairos.doap  com.fyralabs.Kairos.json  meson.build
.github/workflows/: ci.yml  deploy.yml
data/: co.tauos.Kairos.appdata.xml.in  co.tauos.Kairos.desktop.in  co.tauos.Kairos.gresource.xml  co.tauos.Kairos.gschema.xml  co.tauos.Kairos.service.in  com.fyralabs.Kairos.appdata.xml.in  com.fyralabs.Kairos.desktop.in  com.fyralabs.Kairos.gresource.xml  com.fyralabs.Kairos.gschema.xml  com.fyralabs.Kairos.service.in  meson.build  style-dark.css  style.css
data/ui/: mainwindow.ui  weatherhumidityrow.ui  weatherpage.ui  weatherrow.ui  worldlocationfinder.ui
src/: Application.vala  MainWindow.vala  SunGraph.vala  Utils.vala  WeatherGraph.vala  WeatherHumidityRow.vala  WeatherPage.vala  WeatherRow.vala  WorldLocationFinder.vala
src/Helium/: MiniViewSwitcher.vala
